[package]
name = "adventofcode2019"
version = "0.1.0"
authors = ["Tyler Hawkes <tyler.hawkes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1"
arrayvec = "0.5.1"

[features]
part-one = []
part-two = []
